# crud_rust_redis

./: .gitignore  LICENSE  README.md
example1/: Cargo.toml  Makefile  README.md
example1/src/: database.rs  main.rs  options.rs
example1/src/database/: controller.rs  models.rs
example1/src/tests/: database.rs  mod.rs  utils.rs
example1/src/tests/user/: mod.rs
example1/src/users/: controller.rs  mod.rs  models.rs
example1/src/utils/: catch.rs  errors.rs  macros.rs  mod.rs
