# Author: William C. Canin <https://williamcanin.github.io>

[package]
name = "example1"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
redis = { version = "0.26.1", features = ["tls"] }
serde = { version = "1.0.209", features = ["derive"] }
serde-redis = "0.13.0"
serde_json = "1.0.127"
tokio = { version = "1.40.0", features = ["full"] }

[dev-dependencies]

# ==== PROFILES SETTINGS ====

[profile.dev.package."*"]
opt-level = 0
incremental = true

[profile.release]
opt-level = 3
codegen-units = 1
debug = false
strip = true
